<resources>
    <string name="app_name">Tracks in the Wild</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Katelyn Cristina</string>
    <string name="nav_header_subtitle">katelyncmorrison98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_map">Map</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_gear">Gear</string>
    <string name="menu_places">Places</string>
    <string name="wishes">Wishes</string>
    <string name="title_activity_my_places">Past Tracks</string>

</resources>
