<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_calendar" />
    </group>

    <item android:title="@string/wishes">
        <menu>
            <item
                android:id="@+id/nav_gear"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_gear" />
            <item
                android:id="@+id/nav_places"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_places" />
        </menu>
    </item>

</menu>
