<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.katelyncmorrison.tracksinthewild.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.katelyncmorrison.tracksinthewild.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.katelyncmorrison.tracksinthewild.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/activity_my_locations" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.katelyncmorrison.tracksinthewild.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_gear"
        android:name="com.katelyncmorrison.tracksinthewild.ui.gear.GearFragment"
        android:label="@string/menu_gear"
        tools:layout="@layout/fragment_gear" />

    <fragment
        android:id="@+id/nav_places"
        android:name="com.katelyncmorrison.tracksinthewild.ui.places.PlacesFragment"
        android:label="@string/menu_places"
        tools:layout="@layout/fragment_places" />
</navigation>